2012-02-02  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Don't include source files in BUILT_SOURCES.

2012-01-30  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/Makefile.am, server/gtk/Makefile.am, Makefile.am,
	client/gtk/data/Makefile.am: Created the large icons for the GNOME 3
	desktop.
	* editor/gtk/pioneers-editor.desktop.in,
	server/gtk/pioneers-server.desktop.in,
	client/gtk/pioneers.desktop.in: Removed the obsolete UTF-8 encoding tag
	and removed the filename extension from the Icon tag.

2012-01-17  Roland Clobus <rclobus@rclobus.nl>
	* client/common/client.c: Fixed string building function.
	* server/gtk/main.c: Fixed the bug introduced on 2011-11-06, which
	did not correctly disabled the entries related to 'Register server'.

2012-01-13  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/trade.c: Fixed the bug introduced on 2011-08-18, which
	broke the trade in games without interplayer trade
	(it worked in 0.12.4).
	* client/gtk/gui.c, client/gtk/interface.c: Remove the quote tab when
	leaving a game.
	* client/gtk/trade.c: Invalidate offers that are not interesting
	anymore.
	* server/turn.c, server/player.c, server/server.h, server/pregame.c,
	server/buildutil.c, client/common/client.c: Simpler longest road check.

2012-01-09  Roland Clobus <rclobus@rclobus.nl>
	* docs/pioneers-server-gtk.6, docs/pioneers-meta-server.6,
	docs/pioneersai.6, docs/pioneers.6, docs/pioneers-server-console.6,
	docs/pioneers-editor.6: Updated man pages.

2012-01-06  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/offline.c: Send the new avatar style
	(it worked in 0.12.3).

2012-01-05  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Fixed a crash when a game needs logging.

2011-12-11  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/connect.c, server/gtk/main.c, server/server.c: Added
	newline to log messages about errors starting a program.

2011-12-10  Roland Clobus <rclobus@rclobus.nl>